--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-flask
-requests
-beautifulsoup4
-psycopg2-binary
+flask==1.1.2
+requests==2.25.1
+beautifulsoup4==4.9.3
+psycopg2-binary==2.9.3
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
+click==7.1.2
